crates/tests/tools/header2rdl/tests/include/um/urlmon.h

typedef interface IBindStatusCallback IBindStatusCallback;
typedef interface IUri IUri;
typedef interface IInternetSession IInternetSession;
typedef interface IInternetSecurityManager IInternetSecurityManager;
typedef interface IInternetSecurityManagerEx2 IInternetSecurityManagerEx2;
typedef interface IInternetZoneManager IInternetZoneManager;
STDAPI CreateURLMoniker(_In_opt_ LPMONIKER pMkCtx, _In_ LPCWSTR szURL, _Outptr_ LPMONIKER FAR * ppmk);
STDAPI CreateURLMonikerEx(_In_opt_ LPMONIKER pMkCtx, _In_ LPCWSTR szURL, _Outptr_ LPMONIKER FAR * ppmk, DWORD dwFlags);
STDAPI GetClassURL(_In_ LPCWSTR szURL, _Out_ CLSID *pClsID);
STDAPI CreateAsyncBindCtx(DWORD reserved, _In_ IBindStatusCallback *pBSCb,                       
                                _In_opt_ IEnumFORMATETC *pEFetc, _Outptr_ IBindCtx **ppBC);
STDAPI CreateURLMonikerEx2(_In_opt_ LPMONIKER pMkCtx, _In_ IUri* pUri, _Outptr_ LPMONIKER FAR * ppmk, DWORD dwFlags);
STDAPI CreateAsyncBindCtxEx(_In_ IBindCtx *pbc, DWORD dwOptions, _In_ IBindStatusCallback *pBSCb, _In_opt_ IEnumFORMATETC *pEnum,   
                            _Outptr_ IBindCtx **ppBC, DWORD reserved);
STDAPI GetClassFileOrMime(_In_opt_ LPBC pBC, _In_opt_ LPCWSTR szFilename, _In_reads_bytes_opt_(cbSize) LPVOID pBuffer, DWORD cbSize, _In_opt_ LPCWSTR szMime, DWORD dwReserved, _Out_ CLSID *pclsid);
STDAPI CoGetClassObjectFromURL( _In_ REFCLSID rCLASSID,
            _In_ LPCWSTR szCODE, DWORD dwFileVersionMS, 
            DWORD dwFileVersionLS, _In_ LPCWSTR szTYPE,
            _In_ LPBINDCTX pBindCtx, DWORD dwClsContext,
            _Reserved_ LPVOID pvReserved, REFIID riid, _Outptr_ LPVOID * ppv);
STDAPI FaultInIEFeature( HWND hWnd,
            _In_ uCLSSPEC *pClassSpec,
            _Inout_opt_ QUERYCONTEXT *pQuery, DWORD dwFlags);
STDAPI GetComponentIDFromCLSSPEC(_In_ uCLSSPEC *pClassspec,
            _Outptr_ LPSTR * ppszComponentID);
STDAPI FindMediaType(_In_ LPCSTR rgszTypes, _Out_ CLIPFORMAT* rgcfTypes);
STDAPI CreateFormatEnumerator( _In_ _In_range_(>, 0) UINT cfmtetc, _In_reads_(cfmtetc) FORMATETC* rgfmtetc, _Outptr_ IEnumFORMATETC** ppenumfmtetc);
STDAPI FindMediaTypeClass(_In_ LPBC pBC, _In_ LPCSTR szType, _Out_ CLSID *pclsID, DWORD reserved);
STDAPI FindMimeFromData(                                                                                                                  
    _In_opt_                     LPBC    pBC,                   
    _In_opt_                     LPCWSTR pwzUrl,                
    _In_reads_bytes_opt_(cbSize) LPVOID  pBuffer,               
                                 DWORD   cbSize,                
    _In_opt_                     LPCWSTR pwzMimeProposed,       
                                 DWORD   dwMimeFlags,           
    _Outptr_                     LPWSTR  *ppwzMimeOut,          
    _Reserved_                   DWORD   dwReserved);           
STDAPI CompareSecurityIds(_In_reads_(dwLen1) BYTE* pbSecurityId1, _In_ DWORD dwLen1, _In_reads_(dwLen2) BYTE* pbSecurityId2, _In_ DWORD dwLen2, _In_ DWORD dwReserved);
STDAPI CompatFlagsFromClsid(_In_ CLSID *pclsid, _Out_ LPDWORD pdwCompatFlags, _Out_ LPDWORD pdwMiscStatusFlags);
typedef struct _tagBINDINFO
    {
    ULONG cbSize;
    LPWSTR szExtraInfo;
    STGMEDIUM stgmedData;
    DWORD grfBindInfoF;
    DWORD dwBindVerb;
    LPWSTR szCustomVerb;
    DWORD cbstgmedData;
    DWORD dwOptions;
    DWORD dwOptionsFlags;
    DWORD dwCodePage;
    SECURITY_ATTRIBUTES securityAttributes;
    IID iid;
    IUnknown *pUnk;
    DWORD dwReserved;
    } 	BINDINFO;
struct IBindStatusCallback;
STDAPI HlinkGoBack(_In_ IUnknown *pUnk);
typedef 
enum _tagPARSEACTION
    {
        PARSE_CANONICALIZE	= 1,
        PARSE_FRIENDLY	= ( PARSE_CANONICALIZE + 1 ) ,
        PARSE_SECURITY_URL	= ( PARSE_FRIENDLY + 1 ) ,
        PARSE_ROOTDOCUMENT	= ( PARSE_SECURITY_URL + 1 ) ,
        PARSE_DOCUMENT	= ( PARSE_ROOTDOCUMENT + 1 ) ,
        PARSE_ANCHOR	= ( PARSE_DOCUMENT + 1 ) ,
        PARSE_ENCODE_IS_UNESCAPE	= ( PARSE_ANCHOR + 1 ) ,
        PARSE_DECODE_IS_ESCAPE	= ( PARSE_ENCODE_IS_UNESCAPE + 1 ) ,
        PARSE_PATH_FROM_URL	= ( PARSE_DECODE_IS_ESCAPE + 1 ) ,
        PARSE_URL_FROM_PATH	= ( PARSE_PATH_FROM_URL + 1 ) ,
        PARSE_MIME	= ( PARSE_URL_FROM_PATH + 1 ) ,
        PARSE_SERVER	= ( PARSE_MIME + 1 ) ,
        PARSE_SCHEMA	= ( PARSE_SERVER + 1 ) ,
        PARSE_SITE	= ( PARSE_SCHEMA + 1 ) ,
        PARSE_DOMAIN	= ( PARSE_SITE + 1 ) ,
        PARSE_LOCATION	= ( PARSE_DOMAIN + 1 ) ,
        PARSE_SECURITY_DOMAIN	= ( PARSE_LOCATION + 1 ) ,
        PARSE_ESCAPE	= ( PARSE_SECURITY_DOMAIN + 1 ) ,
        PARSE_UNESCAPE	= ( PARSE_ESCAPE + 1 ) 
    } 	PARSEACTION;
typedef 
enum _tagPSUACTION
    {
        PSU_DEFAULT	= 1,
        PSU_SECURITY_URL_ONLY	= ( PSU_DEFAULT + 1 ) 
    } 	PSUACTION;
typedef 
enum _tagQUERYOPTION
    {
        QUERY_EXPIRATION_DATE	= 1,
        QUERY_TIME_OF_LAST_CHANGE	= ( QUERY_EXPIRATION_DATE + 1 ) ,
        QUERY_CONTENT_ENCODING	= ( QUERY_TIME_OF_LAST_CHANGE + 1 ) ,
        QUERY_CONTENT_TYPE	= ( QUERY_CONTENT_ENCODING + 1 ) ,
        QUERY_REFRESH	= ( QUERY_CONTENT_TYPE + 1 ) ,
        QUERY_RECOMBINE	= ( QUERY_REFRESH + 1 ) ,
        QUERY_CAN_NAVIGATE	= ( QUERY_RECOMBINE + 1 ) ,
        QUERY_USES_NETWORK	= ( QUERY_CAN_NAVIGATE + 1 ) ,
        QUERY_IS_CACHED	= ( QUERY_USES_NETWORK + 1 ) ,
        QUERY_IS_INSTALLEDENTRY	= ( QUERY_IS_CACHED + 1 ) ,
        QUERY_IS_CACHED_OR_MAPPED	= ( QUERY_IS_INSTALLEDENTRY + 1 ) ,
        QUERY_USES_CACHE	= ( QUERY_IS_CACHED_OR_MAPPED + 1 ) ,
        QUERY_IS_SECURE	= ( QUERY_USES_CACHE + 1 ) ,
        QUERY_IS_SAFE	= ( QUERY_IS_SECURE + 1 ) ,
        QUERY_USES_HISTORYFOLDER	= ( QUERY_IS_SAFE + 1 ) ,
        QUERY_IS_CACHED_AND_USABLE_OFFLINE	= ( QUERY_USES_HISTORYFOLDER + 1 ) 
    } 	QUERYOPTION;
STDAPI CoInternetParseUrl(                              
                                             LPCWSTR      pwzUrl,        
                                             PARSEACTION  ParseAction,   
                                             DWORD        dwFlags,       
    _Out_writes_to_(cchResult,*pcchResult+1) LPWSTR       pszResult,     
                                             DWORD        cchResult,     
    _Out_                                    DWORD       *pcchResult,    
                                             DWORD        dwReserved     
    );
STDAPI CoInternetParseIUri(                             
    _In_                                     IUri        *pIUri,         
                                             PARSEACTION  ParseAction,   
                                             DWORD        dwFlags,       
    _Out_writes_to_(cchResult,*pcchResult+1) LPWSTR       pwzResult,     
                                             DWORD        cchResult,     
    _Out_                                    DWORD       *pcchResult,    
    _Reserved_                               DWORD_PTR    dwReserved     
    );
STDAPI CoInternetCombineUrl(                                           
                                             LPCWSTR   pwzBaseUrl,     
                                             LPCWSTR   pwzRelativeUrl, 
                                             DWORD     dwCombineFlags, 
    _Out_writes_to_(cchResult,*pcchResult+1) LPWSTR    pszResult,      
                                             DWORD     cchResult,      
    _Out_opt_                                DWORD     *pcchResult,    
    _Reserved_                               DWORD     dwReserved      
    );
STDAPI CoInternetCombineUrlEx(               
    _In_opt_     IUri       *pBaseUri,       
    _In_opt_     LPCWSTR     pwzRelativeUrl, 
                 DWORD       dwCombineFlags, 
    _Outptr_     IUri      **ppCombinedUri,  
    _In_opt_     DWORD_PTR   dwReserved      
    );
STDAPI CoInternetCombineIUri (               
    _In_         IUri       *pBaseUri,       
    _In_         IUri       *pRelativeUri,   
                 DWORD       dwCombineFlags, 
    _Outptr_     IUri      **ppCombinedUri,  
    _In_opt_     DWORD_PTR   dwReserved      
    );
STDAPI CoInternetCompareUrl(             
    LPCWSTR pwzUrl1,                     
    LPCWSTR pwzUrl2,                     
    DWORD dwFlags                        
    );
STDAPI CoInternetGetProtocolFlags(       
             LPCWSTR     pwzUrl,         
    _Out_    DWORD      *pdwFlags,       
             DWORD       dwReserved      
    );
STDAPI CoInternetQueryInfo(                                                
                                                 LPCWSTR     pwzUrl,       
                                                 QUERYOPTION QueryOptions, 
                                                 DWORD       dwQueryFlags, 
    _Out_writes_bytes_to_(cbBuffer, *pcbBuffer)  LPVOID      pvBuffer,     
    _In_range_(>=, sizeof(DWORD))                DWORD       cbBuffer,     
    _Out_opt_                                    DWORD      *pcbBuffer,    
                                                 DWORD       dwReserved    
    );
STDAPI CoInternetGetSession(                             
                 DWORD               dwSessionMode,      
    _Outptr_     IInternetSession  **ppIInternetSession, 
                 DWORD               dwReserved          
    );
STDAPI CoInternetGetSecurityUrl(         
                 LPCWSTR pwszUrl,        
    _Outptr_     LPWSTR *ppwszSecUrl,    
    _In_         PSUACTION   psuAction,  
    _Reserved_   DWORD dwReserved        
    );
STDAPI CoInternetGetSecurityUrlEx(           
    _In_         IUri           *pUri,       
    _Outptr_     IUri          **ppSecUri,   
                 PSUACTION       psuAction,  
    _Reserved_   DWORD_PTR       dwReserved  
    );
typedef 
enum _tagINTERNETFEATURELIST
    {
        FEATURE_OBJECT_CACHING	= 0,
        FEATURE_ZONE_ELEVATION	= ( FEATURE_OBJECT_CACHING + 1 ) ,
        FEATURE_MIME_HANDLING	= ( FEATURE_ZONE_ELEVATION + 1 ) ,
        FEATURE_MIME_SNIFFING	= ( FEATURE_MIME_HANDLING + 1 ) ,
        FEATURE_WINDOW_RESTRICTIONS	= ( FEATURE_MIME_SNIFFING + 1 ) ,
        FEATURE_WEBOC_POPUPMANAGEMENT	= ( FEATURE_WINDOW_RESTRICTIONS + 1 ) ,
        FEATURE_BEHAVIORS	= ( FEATURE_WEBOC_POPUPMANAGEMENT + 1 ) ,
        FEATURE_DISABLE_MK_PROTOCOL	= ( FEATURE_BEHAVIORS + 1 ) ,
        FEATURE_LOCALMACHINE_LOCKDOWN	= ( FEATURE_DISABLE_MK_PROTOCOL + 1 ) ,
        FEATURE_SECURITYBAND	= ( FEATURE_LOCALMACHINE_LOCKDOWN + 1 ) ,
        FEATURE_RESTRICT_ACTIVEXINSTALL	= ( FEATURE_SECURITYBAND + 1 ) ,
        FEATURE_VALIDATE_NAVIGATE_URL	= ( FEATURE_RESTRICT_ACTIVEXINSTALL + 1 ) ,
        FEATURE_RESTRICT_FILEDOWNLOAD	= ( FEATURE_VALIDATE_NAVIGATE_URL + 1 ) ,
        FEATURE_ADDON_MANAGEMENT	= ( FEATURE_RESTRICT_FILEDOWNLOAD + 1 ) ,
        FEATURE_PROTOCOL_LOCKDOWN	= ( FEATURE_ADDON_MANAGEMENT + 1 ) ,
        FEATURE_HTTP_USERNAME_PASSWORD_DISABLE	= ( FEATURE_PROTOCOL_LOCKDOWN + 1 ) ,
        FEATURE_SAFE_BINDTOOBJECT	= ( FEATURE_HTTP_USERNAME_PASSWORD_DISABLE + 1 ) ,
        FEATURE_UNC_SAVEDFILECHECK	= ( FEATURE_SAFE_BINDTOOBJECT + 1 ) ,
        FEATURE_GET_URL_DOM_FILEPATH_UNENCODED	= ( FEATURE_UNC_SAVEDFILECHECK + 1 ) ,
        FEATURE_TABBED_BROWSING	= ( FEATURE_GET_URL_DOM_FILEPATH_UNENCODED + 1 ) ,
        FEATURE_SSLUX	= ( FEATURE_TABBED_BROWSING + 1 ) ,
        FEATURE_DISABLE_NAVIGATION_SOUNDS	= ( FEATURE_SSLUX + 1 ) ,
        FEATURE_DISABLE_LEGACY_COMPRESSION	= ( FEATURE_DISABLE_NAVIGATION_SOUNDS + 1 ) ,
        FEATURE_FORCE_ADDR_AND_STATUS	= ( FEATURE_DISABLE_LEGACY_COMPRESSION + 1 ) ,
        FEATURE_XMLHTTP	= ( FEATURE_FORCE_ADDR_AND_STATUS + 1 ) ,
        FEATURE_DISABLE_TELNET_PROTOCOL	= ( FEATURE_XMLHTTP + 1 ) ,
        FEATURE_FEEDS	= ( FEATURE_DISABLE_TELNET_PROTOCOL + 1 ) ,
        FEATURE_BLOCK_INPUT_PROMPTS	= ( FEATURE_FEEDS + 1 ) ,
        FEATURE_ENTRY_COUNT	= ( FEATURE_BLOCK_INPUT_PROMPTS + 1 ) 
    } 	INTERNETFEATURELIST;
STDAPI CoInternetSetFeatureEnabled(      
    INTERNETFEATURELIST FeatureEntry,    
    DWORD dwFlags,                       
    BOOL fEnable                         
    );
STDAPI CoInternetIsFeatureEnabled(       
    INTERNETFEATURELIST FeatureEntry,    
    DWORD dwFlags                        
    );
STDAPI CoInternetIsFeatureEnabledForUrl( 
    INTERNETFEATURELIST FeatureEntry,    
    DWORD dwFlags,                       
    _In_opt_ LPCWSTR szURL,                       
    _In_opt_ IInternetSecurityManager *pSecMgr    
    );
STDAPI CoInternetIsFeatureEnabledForIUri( 
    INTERNETFEATURELIST FeatureEntry,     
    DWORD dwFlags,                        
    _In_opt_ IUri * pIUri,                         
    _In_opt_ IInternetSecurityManagerEx2 *pSecMgr  
    );
STDAPI CoInternetIsFeatureZoneElevationEnabled( 
    _In_opt_ LPCWSTR szFromURL,                 
    _In_ LPCWSTR szToURL,                       
    _In_opt_ IInternetSecurityManager *pSecMgr, 
    DWORD dwFlags                               
    );
STDAPI CopyStgMedium(_In_ const STGMEDIUM * pcstgmedSrc,  
                     _Out_      STGMEDIUM * pstgmedDest);
STDAPI CopyBindInfo(_In_ const BINDINFO * pcbiSrc,   
                    _Out_      BINDINFO * pbiDest );
STDAPI CoInternetCreateSecurityManager(_In_opt_ IServiceProvider *pSP, _Outptr_ IInternetSecurityManager **ppSM, DWORD dwReserved);
STDAPI CoInternetCreateZoneManager(_In_opt_ IServiceProvider *pSP, _Outptr_ IInternetZoneManager **ppZM, DWORD dwReserved);
typedef struct _tagSOFTDISTINFO
    {
    ULONG cbSize;
    DWORD dwFlags;
    DWORD dwAdState;
    LPWSTR szTitle;
    LPWSTR szAbstract;
    LPWSTR szHREF;
    DWORD dwInstalledVersionMS;
    DWORD dwInstalledVersionLS;
    DWORD dwUpdateVersionMS;
    DWORD dwUpdateVersionLS;
    DWORD dwAdvertisedVersionMS;
    DWORD dwAdvertisedVersionLS;
    DWORD dwReserved;
    } 	SOFTDISTINFO;
typedef struct _tagSOFTDISTINFO *LPSOFTDISTINFO;
STDAPI GetSoftwareUpdateInfo( LPCWSTR szDistUnit, _Out_ LPSOFTDISTINFO psdi );